--- a/week3/Day1/Practice/FirstJSX/List_Dojo/src/App.css
+++ b/week3/Day1/Practice/FirstJSX/List_Dojo/src/App.css
@@ -1,30 +1,34 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 50px;
   border-radius: 15px;
-  background-image: linear-gradient(to bottom right, #3639d9, #cf1980);
-  color:#fff;
+  /* background-image: linear-gradient(to bottom right, #3639d9, #cf1980); */
+  /* color:#fff; */
   border:1px solid transparent;
 
-  background-color: #333;
-  box-shadow: 20px 20px 17px 0px rgba(0,0,0,0.75);
+  background-color: #020202;
+  /* box-shadow: 20px 20px 17px 0px rgba(0,0,0,0.75); */
+  box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #00d7c3;
+  border: 3px solid #00d7c3;
 }
 #root:hover{
-  transform: scale(1.1);
+  transform: scale(1.2);
   opacity: .9;
+  box-shadow: 0 0 20px 5px #00d7c3 inset, 0 0 20px 5px #00d7c3;
+
 }
 body{
-  background-color: #94a3b8;
+  background-color: black;
   font-family: 'Roboto', sans-serif;
 
-  color: aliceblue;
+  color: #00d7c3;
 }
 .card{
   margin-left: 0px;
 }
 h1{
-  border-bottom: 5px double hsl(306, 100%, 2%);
+  border-bottom: 15px double #00d7c3;
   text-transform: uppercase;
   transition: all 5s ease;
   text-align: center;
@@ -49,7 +53,7 @@ h2{
 }
 h1:hover{
   font-size: 3.5 erm;
-  color: rgb(21, 12, 15);
+  color: white;
 }
 ul{
   list-style: none;
