Product_Manager_Part2

--- a/week5/Day2/core/Product_Manager1/client/src/App.css
+++ b/week5/Day2/core/Product_Manager1/client/src/App.css
@@ -48,4 +48,10 @@ header{
   color:rgb(136, 135, 135);
   font-size: large;
 }
+.display{
+  width: 75%;
+  margin:auto ;
+  margin-top: 60px;
+  border:2px solide red;
+}
 
