--- a/week5/Day2/core/Product_Manager1/client/src/App.css
+++ b/week5/Day2/core/Product_Manager1/client/src/App.css
@@ -36,7 +36,7 @@ header{
   width: 75%;
   height: 30px;
 }
-.btn:focus{
+.btn:focus, .btn:hover{
   border: 3px solid #ccc;
   background: transparent;
 }
@@ -47,6 +47,8 @@ header{
   border-bottom: 2px solid #ccc;
   color:rgb(136, 135, 135);
   font-size: large;
+  background-color: rgb(249, 249, 249);
+
 }
 .display{
   width: 75%;
